<resources>
    <string name="app_name">Screen Mirror</string>
    <string name="splash_title">Screen Mirror</string>
    <string name="splash_subtitle">Ekran Paylaşımı</string>
    <string name="splash_loading">Hazırlanıyor…</string>
    <string name="main_title">Screen Mirror</string>
    <string name="main_subtitle">Ekranınızı anında paylaşın veya bir odaya katılın</string>
    <string name="main_room_label">ODA ADI</string>
    <string name="main_room_hint">Oda adı girin</string>
    <string name="main_room_hint_create">Oda adı oluşturun</string>
    <string name="room_copied">Oda adı kopyalandı</string>
    <string name="main_start">BAŞLA</string>
    <string name="main_connect">BAĞLAN</string>
    <string name="main_share">Yayınla</string>
    <string name="main_watch">İzle</string>
    <string name="main_share_desc">Kendi ekranınızı canlı yayınlayın</string>
    <string name="main_watch_desc">Başka bir odanın ekranını izleyin</string>
    <string name="main_error_empty_room">Oda adını girin</string>
    <string name="nav_home">Ana Sayfa</string>
    <string name="nav_recent">Son Odalar</string>
    <string name="nav_profile">Profil</string>
    <string name="nav_help">Yardım</string>
    <string name="status_live">CANLI</string>
    <string name="status_connecting">Bağlanıyor…</string>
    <string name="status_connected">Bağlandı</string>
    <string name="status_disconnected">Bağlantı kesildi</string>
    <string name="drawer_title">Destek</string>
    <string name="drawer_help">Yardım</string>
    <string name="drawer_feedback">Geri Bildirim</string>
    <string name="drawer_app_title">Uygulama</string>
    <string name="drawer_settings">Ayarlar</string>
    <string name="drawer_about">Uygulama Hakkında</string>
    <string name="drawer_share">Uygulamayı Paylaş</string>
    <string name="drawer_header_title">ScreenShare</string>
    <string name="drawer_header_subtitle">Ekran Paylaşımı v1.0</string>
    <string name="menu_theme">Tema</string>
    <string name="menu_rate">Bizi Değerlendirin</string>
    <string name="menu_history">Geçmiş</string>
    <string name="theme_title">Tema Seç</string>
    <string name="theme_system">Sistem</string>
    <string name="theme_light">Açık</string>
    <string name="theme_dark">Koyu</string>
    <string name="navigation_drawer_open">Menüyü Aç</string>
    <string name="navigation_drawer_close">Menüyü Kapat</string>
    <string name="settings_title">Ayarlar</string>
    <string name="settings_language">Dil</string>
    <string name="settings_notifications">Bildirimler</string>
    <string name="settings_notifications_desc">Bildirimleri aç/kapat</string>
    <string name="settings_quality_stats">Kalite İstatistikleri</string>
    <string name="settings_quality_stats_desc">Bağlantı kalitesi istatistiklerini göster</string>
    <string name="settings_haptic">Titreşim</string>
    <string name="settings_haptic_desc">Dokunma geri bildirimi titreşimleri</string>
    <string name="settings_turn_title">TURN Sunucu Ayarları</string>
    <string name="settings_turn_url">TURN Sunucu Adresi</string>
    <string name="settings_turn_url_hint">turn:openrelay.metered.ca:443</string>
    <string name="settings_turn_user">Kullanıcı Adı</string>
    <string name="settings_turn_user_hint">openrelayproject</string>
    <string name="settings_turn_pass">Şifre</string>
    <string name="settings_turn_pass_hint">openrelayproject</string>
    <string name="settings_resolution_title">Yayın Kalitesi</string>
    <string name="settings_resolution">Çözünürlük</string>
    <string name="settings_fps">Kare Hızı (FPS)</string>
    <string name="settings_category_general">Genel</string>
    <string name="settings_category_advanced">Gelişmiş</string>
    <string name="settings_reset_all">Varsayılana Dön</string>
    <string name="settings_reset_all_desc">Tüm ayarları fabrika ayarlarına sıfırla</string>
    <string name="settings_reset_all_title">Ayarlari Sifirla</string>
    <string name="settings_reset_all_msg">Tüm ayarlar varsayilan degerlerine dondurulecek. Emin misiniz?</string>
    <string name="settings_reset_confirm">Sifirla</string>
    <string name="settings_reset_done">Ayarlar sifirlandi</string>
    <string name="settings_validation_error">Giris Hatasi</string>
    <string name="settings_error_turn_url_empty">TURN sunucu adresi bos birakilamaz</string>
    <string name="settings_error_turn_url_format">TURN adresi \"turn:\" veya \"stun:\" ile baslamalidir</string>
    <string name="settings_error_turn_url_host">TURN adresi gecersiz. Orn: turn:sunucu.com:3478</string>
    <string name="settings_error_turn_field_empty">%s bos birakilamaz</string>
    <string name="btn_ok">Tamam</string>
    <string name="profile_title">Profil</string>
    <string name="profile_create">Takma Ad Oluştur</string>
    <string name="profile_create_desc">Cihazınız otomatik olarak algılandı. Bir takma ad seçin.</string>
    <string name="profile_device_label">CİHAZ</string>
    <string name="profile_nickname_hint">Takma adınız</string>
    <string name="profile_save">KAYDET</string>
    <string name="profile_user">Kullanıcı</string>
    <string name="profile_sessions">Oturum</string>
    <string name="profile_total_time">Toplam Süre</string>
    <string name="profile_menu_settings">Ayarlar</string>
    <string name="profile_menu_help">Yardım</string>
    <string name="profile_menu_about">Hakkında</string>
    <string name="profile_delete">Verileri Temizle</string>
    <string name="profile_version">Screen Mirror v1.0.0</string>
    <string name="profile_error_nickname">Takma ad gerekli</string>
    <string name="profile_saved">Profil kaydedildi</string>
    <string name="profile_updated">Profil güncellendi</string>
    <string name="profile_deleted">Profil silindi</string>
    <string name="profile_nickname_edit">Düzenlemek için dokunun</string>
    <string name="profile_nickname_done">Bitti</string>
    <string name="profile_avatar_title">Avatar Seç</string>
    <string name="profile_stat_viewing">İzlenen Süre</string>
    <string name="profile_stat_last_active">Son Bağlantı</string>
    <string name="profile_stat_top_room">En Sık Oda</string>
    <string name="profile_stat_success">Başarı</string>
    <string name="profile_stat_hours_format">%d saat</string>
    <string name="profile_stat_never">Hiç</string>
    <string name="profile_device_info">Cihaz Bilgisi</string>
    <string name="profile_device_android">Android</string>
    <string name="profile_device_resolution">Çözünürlük</string>
    <string name="profile_device_network">Ağ</string>
    <string name="profile_device_battery">Pil</string>
    <string name="profile_share_title">Profili Paylaş</string>
    <string name="profile_share_text" formatted="false">%s • %s • %d oturum</string>
    <string name="profile_network_wifi">WiFi</string>
    <string name="profile_network_mobile">Mobil</string>
    <string name="profile_network_none">Yok</string>
    <string name="profile_battery_format">%%%d</string>
    <string name="greeting_morning">Günaydın, %s</string>
    <string name="greeting_afternoon">İyi günler, %s</string>
    <string name="greeting_evening">İyi akşamlar, %s</string>
    <string name="greeting_night">İyi geceler, %s</string>
    <string name="badges_title">Rozetler</string>
    <string name="badge_first_session">İlk Adım</string>
    <string name="badge_first_session_desc">İlk oturumunu tamamladın</string>
    <string name="badge_broadcaster_10">Yayıncı</string>
    <string name="badge_broadcaster_10_desc">10 oda yayınladın</string>
    <string name="badge_viewer_20">Gözlemci</string>
    <string name="badge_viewer_20_desc">20 oda izledin</string>
    <string name="badge_night_owl">Gece Kuşu</string>
    <string name="badge_night_owl_desc">Gece yarısından sonra bağlandın</string>
    <string name="badge_week_streak">Haftanın Ustası</string>
    <string name="badge_week_streak_desc">7 gün üst üste kullandın</string>
    <string name="badge_master_50">Usta Yayıncı</string>
    <string name="badge_master_50_desc">50 oda yayınladın</string>
    <string name="badge_hours_100">Zaman ustası</string>
    <string name="badge_hours_100_desc">100 saati aştın</string>
    <string name="badge_unlocked">Açıldı!</string>
    <string name="badge_locked">Kilitli</string>
    <string name="activity_title">Haftalık Aktivite</string>
    <string name="activity_min_format">%d dk</string>
    <string name="activity_total_format">Toplam: %d dakika</string>
    <string name="activity_no_data">Henüz veri yok</string>
    <string name="quick_start_title">Hızlı Başlangıç</string>
    <string name="quick_start_resolution">Varsayılan Çözünürlük</string>
    <string name="quick_start_fps">Varsayılan FPS</string>
    <string name="quick_start_auto_reconnect">Otomatik Yeniden Bağlan</string>
    <string name="quick_start_auto_reconnect_desc">Bağlantı koptuğunda otomatik olarak yeniden dene</string>
    <string name="quick_start_saved">Tercihler kaydedildi</string>
    <string name="timeline_title">Bağlantı Haritası</string>
    <string name="timeline_legend_host">Yayıncı</string>
    <string name="timeline_legend_viewer">İzleyici</string>
    <string name="timeline_no_data">Henüz bağlantı yok</string>
    <string name="timeline_detail_format">%s • %d dk • %s</string>
    <string name="timeline_last_30">Son 30 Gün</string>
    <string name="progress_title">Başarı İlerlemesi</string>
    <string name="progress_format">%d/%d</string>
    <string name="profile_photo_title">Fotoğraf Seç</string>
    <string name="profile_change_profile">Profil Değiştir</string>
    <string name="profile_photo_gallery">Galeriden Seç</string>
    <string name="profile_photo_camera">Fotoğraf Çek</string>
    <string name="profile_photo_remove">Fotoğrafı Kaldır</string>
    <string name="profile_photo_cropped">Fotoğraf güncellendi</string>
    <string name="recent_empty">Henüz oda geçmişi yok</string>
    <string name="recent_deleted">%s silindi</string>
    <string name="recent_undo">Geri Al</string>
    <string name="recent_delete_title">Oda Sil</string>
    <string name="recent_delete_msg">%s odasını silmek istediğinize emin misiniz?</string>
    <string name="recent_delete_confirm">Sil</string>
    <string name="recent_participants">Katılımcı: %d</string>
    <string name="sender_room_prefix">Oda: %s</string>
    <string name="sender_status_live">CANLI</string>
    <string name="sender_screenshot">Ekran Görüntüsü</string>
    <string name="sender_record">Kaydet</string>
    <string name="sender_stop_record">Durdur</string>
    <string name="sender_freeze">Dondur</string>
    <string name="sender_unfreeze">Devam</string>
    <string name="sender_quality">Kalite</string>
    <string name="sender_quality_resolution">Çözünürlük</string>
    <string name="sender_quality_fps">Kare Hızı (FPS)</string>
    <string name="sender_quality_apply">Uygula</string>
    <string name="sender_quality_changed">Kalite değiştirildi: %1$s %2$s</string>
    <string name="help_feedback_question">Bu yardımcı oldu mu?</string>
    <string name="help_feedback_yes">Evet</string>
    <string name="help_feedback_no">Hayır</string>
    <string name="help_feedback_thanks">Teşekkürler!</string>
    <string name="feedback_title">Geri Bildirim</string>
    <string name="feedback_header">Görüşleriniz bizim için değerli</string>
    <string name="feedback_subject_label">KONU</string>
    <string name="feedback_subject_suggestion">Öneri</string>
    <string name="feedback_subject_bug">Hata</string>
    <string name="feedback_subject_opinion">Görüş</string>
    <string name="feedback_name_label">AD</string>
    <string name="feedback_name_hint">Adınız</string>
    <string name="feedback_email_label">E-POSTA</string>
    <string name="feedback_email_hint">E-posta adresiniz</string>
    <string name="feedback_message_label">MESAJINIZ</string>
    <string name="feedback_message_hint">Mesajınızı yazın…</string>
    <string name="feedback_send">GÖNDER</string>
</resources>